Lecture: Improved lecture wall css and template. Removed lecture walls own header. Bugs fixed: Wall is now draggable Popup for creating questions jumps when moving first time Restored navigation bar in lecture view (student/teacher/manage)
Draggable: Draghandle has now width: 100%

--- a/timApp/static/css/style.css
+++ b/timApp/static/css/style.css
@@ -37,6 +37,8 @@ td.selected {
 }
 
 .wall-behind {
+    min-height: 20em;
+    overflow: hidden;
     border: 1px solid grey;
     border-radius: 10px;
     width: 20em;
@@ -44,9 +46,7 @@ td.selected {
     position: fixed;
     top: 5%;
     right: 5%;
-    border-style: outset;
     min-width: 20em;
-    min-height: 28px;
     background-color: white;
 }
 
@@ -54,13 +54,8 @@ td.selected {
     list-style-type: none;
 }
 
-.wall-behind div {
-    display: inline-block;
-}
-
 .wall-base {
     width: 100%;
-    height: 100%;
 }
 
 .wall-topbar {
@@ -77,9 +72,6 @@ td.selected {
 }
 
 .wall-content {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
     height: 100%;
     width: 100%;
     /*position: absolute;*/
@@ -90,18 +82,20 @@ td.selected {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     width: 100%;
-    height: 100%;
-
+    position: absolute;
+    bottom: 45px;
+    top: 13px;
     /*padding-bottom: 2.5em;*/
 }
 
 .wall-behind textarea {
-    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-    -moz-box-sizing: border-box; /* Firefox, other Gecko */
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
     box-sizing: border-box;
     border: none;
+    outline: none;
     width: 100%;
-    height: 80%;
+    height: 100%;
     resize: none;
     font-family: "Arial", Verdana, "Arial", Verdana, sans-serif;
     font-size: 12px;
@@ -118,13 +112,12 @@ td.selected {
 }
 
 .wall-footer {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    border-radius: 10px;
-    border: 1px solid #3cc;
     background-color: #3cc;
     width: 100%;
+    position: absolute;
+    bottom: 0;
+    height: 45px;
+    max-height: 45px;
 }
 .wall-buttons {
     /*position: absolute;*/
@@ -134,12 +127,12 @@ td.selected {
 }
 
 .wall-info-buttons {
+    float: left;
     width: 20%;
     font-size: 12px;
 }
 
 .wall-info-buttons label {
-    display: inline-block;
     text-align: left;
     vertical-align: 0;
     width: 100%;
